<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="auth_screen_dont_have_account_wording">Don’t have an account yet?\nNo worries! Join our community today and start your journey with us. Click here tor register!</string>
    <string name="auth_screen_already_have_account_wording">Already have an account?\nGreat! You can simply log in to continue enjoying our services. Click here to log in!</string>
    <string name="email" translatable="false">Email</string>
    <string name="name" translatable="false">Name</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="add_story">Add story</string>
    <string name="story_photo">Story photo</string>
    <string name="upload">Upload</string>
    <string name="share_your_story">Share your story</string>
    <string name="upload_photo">Upload your photo</string>
    <string name="click_to_upload_your_photo">Click to upload your photo</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="register_successfully">Register success, please login to continue</string>
    <string name="login_successfully">Login success</string>
    <string name="no_story_found">There is no story yet, let\'s make one!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_image_from">Choose image from:</string>
    <string name="success_upload_story">Success upload story</string>
    <string name="please_upload_your_photo">Please upload your photo</string>
    <string name="logout">Logout</string>
    <string name="detail_story">Detail story</string>
    <string name="logo_transition" translatable="false">logo transition</string>
    <string name="nearby_stories">Nearby stories</string>
    <string name="create_story">Create story</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">Something went wrong, try again later</string>
    <string name="title_activity_nearby_story" translatable="false">NearbyStoryActivity</string>
    <string name="share_my_location">Share my location?</string>
    <string name="location_not_found">Cannot find your location, please try again later.</string>
    <string name="location_permission_denied">To use this feature, please grant location access.</string>
</resources>