<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/story_app_logo"
        app:tint="?colorOnBackground" />

    <ImageView
        android:id="@+id/imgLogout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="@id/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgLogo"
        app:layout_constraintVertical_bias="0.3"
        app:tint="?colorOnBackground" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:name="com.augieafr.storyapp.presentation.list_story.ListStoryFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabCreateStory"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_story"
        android:visibility="gone"
        app:icon="@drawable/baseline_create_24"
        app:iconSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/fabMoreAction"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNearbyStory"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nearby_stories"
        app:icon="@drawable/baseline_location_on_24"
        app:iconSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/fabCreateStory"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMoreAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_story"
        android:src="@drawable/baseline_keyboard_arrow_up_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>